force-app/main/default/objects/Complaint__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Name</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Nonconformity</relationshipName>
    <type>Lookup</type>
</CustomField>