force-app/main/default/objects/Complaint__c/fields/Account_Prio__c.field-meta.xml
<CustomField>
    <fullName>Account_Prio__c</fullName>
    <formula>case(  Account__r.Priority__c  ,
&quot;A&quot;,&quot;A&quot;,
&quot;B&quot;,&quot;B&quot;,
&quot;C&quot;,&quot;C&quot;,
&quot;Z&quot;,&quot;Z&quot;,
&quot;X&quot;)</formula>
    <inlineHelpText>Copied from Account</inlineHelpText>
    <label>Account Prio</label>
    <type>Text</type>
</CustomField>