force-app/main/default/objects/Complaint__c/fields/Affected_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Affected_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Most relevant opportunity where the problem occurred.</inlineHelpText>
    <label>Affected Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>