force-app/main/default/objects/Complaint__c/fields/Affected_Process__c.field-meta.xml
<CustomField>
    <fullName>Affected_Process__c</fullName>
    <inlineHelpText>process at u-blox that is affected by the complaint</inlineHelpText>
    <label>Affected Process</label>
    <length>20</length>
    <type>Text</type>
</CustomField>