force-app/main/default/objects/Complaint__c/fields/Affected_Product__c.field-meta.xml
<CustomField>
    <fullName>Affected_Product__c</fullName>
    <inlineHelpText>Which product or range of products is affected? eg u-blox 5 modules, LEA-5H</inlineHelpText>
    <label>Affected Product</label>
    <length>20</length>
    <type>Text</type>
</CustomField>