force-app/main/default/objects/Complaint__c/fields/Consequence__c.field-meta.xml
<CustomField>
    <fullName>Consequence__c</fullName>
    <label>Consequence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer not amused</fullName>
            </value>
            <value>
                <fullName>Opportunity delayed</fullName>
            </value>
            <value>
                <fullName>Opportunity lost</fullName>
            </value>
            <value>
                <fullName>Customer lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>