force-app/main/default/objects/Complaint__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>Date when the affected delivery was sent out</description>
    <inlineHelpText>Date when the affected delivery was sent out</inlineHelpText>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>