force-app/main/default/objects/Complaint__c/fields/Delivery_Slip__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Slip__c</fullName>
    <description>Number of the order which is affected</description>
    <inlineHelpText>Number of the order which is affected, e.g. 32542/0, or 35674/3</inlineHelpText>
    <label>Delivery Slip #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>