force-app/main/default/objects/Complaint__c/fields/Full_Description__c.field-meta.xml
<CustomField>
    <fullName>Full_Description__c</fullName>
    <inlineHelpText>Description of problem</inlineHelpText>
    <label>Full Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>