force-app/main/default/objects/Complaint__c/fields/Potential_damage_CHF__c.field-meta.xml
<CustomField>
    <fullName>Potential_damage_CHF__c</fullName>
    <label>Potential damage (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>