force-app/main/default/objects/Complaint__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If possible, select a case that is related to the complaint.</inlineHelpText>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>