force-app/main/default/objects/Complaint__c/fields/Related_Issue__c.field-meta.xml
<CustomField>
    <fullName>Related_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Describes the Issue that is related to this complaint</description>
    <inlineHelpText>Choose the related Issue if already available</inlineHelpText>
    <label>Related Issue</label>
    <referenceTo>Issue__c</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>