force-app/main/default/objects/Complaint__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <inlineHelpText>Short description of complaint</inlineHelpText>
    <label>Short Description</label>
    <length>60</length>
    <type>Text</type>
</CustomField>