force-app/main/default/objects/Complaint__c/fields/Type_Of_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Complaint__c</fullName>
    <inlineHelpText>Categorize the type of problem that caused the complaint</inlineHelpText>
    <label>Type Of Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Liability claim</fullName>
            </value>
            <value>
                <fullName>Logistics problem</fullName>
            </value>
            <value>
                <fullName>Missing feature</fullName>
            </value>
            <value>
                <fullName>Quality problem</fullName>
            </value>
            <value>
                <fullName>Technical problem</fullName>
            </value>
            <value>
                <fullName>Warranty claim</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>