force-app/main/default/objects/Complaint__c/listViews/AllComplaints.listView-meta.xml
<ListView>
    <fullName>AllComplaints</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Prio__c</columns>
    <columns>Account__c</columns>
    <columns>Type_Of_Complaint__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Related_Issue__c</columns>
    <columns>Affected_Product__c</columns>
    <columns>Affected_Process__c</columns>
    <columns>Consequence__c</columns>
    <columns>uB_Office__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Complaints</label>
</ListView>