force-app/main/default/objects/Complaint__c/listViews/Logistics_Complaints.listView-meta.xml
<ListView>
    <fullName>Logistics_Complaints</fullName>
    <columns>uB_Office__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Prio__c</columns>
    <columns>Account__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Full_Description__c</columns>
    <columns>Affected_Product__c</columns>
    <columns>Consequence__c</columns>
    <columns>Affected_Process__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_Of_Complaint__c</field>
        <operation>equals</operation>
        <value>Logistics problem</value>
    </filters>
    <label>Logistics Complaints</label>
</ListView>